Started the migration from a custom collapsible widget to the built in tree view control

--- a/defaults.yaml
+++ b/defaults.yaml
@@ -1,4 +1,5 @@
 repositories:
   - name: ArchiYou Components
+    host_name: Archiyou
     host_url: https://archiyou.com/
     models_url: https://occi.archiyou.nl
