Added repository remove button, auto-update, and numerous other improvements

--- a/defaults.yaml
+++ b/defaults.yaml
@@ -1,5 +1,5 @@
 repositories:
-  - name: OCCI test
-    host_name: Mark van der Net
-    host_url: https://archiyou.com/
+  - library: OCCI test
+    maintainer: Mark van der Net
+    maintainer_url: https://archiyou.com/
     models_url: https://occi.archiyou.nl
